tests/ui/closures/issue-111932.stderr
error[E0277]: the size for values of type `(dyn Foo + 'static)` cannot be known at compilation time
  --> $DIR/issue-111932.rs:4:20
   |
LL |     foos.for_each(|foo| {
   |                    ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Foo + 'static)`
   = note: all function arguments must have a statically known size
   = help: unsized fn params are gated as an unstable feature

error[E0277]: the size for values of type `dyn Foo` cannot be known at compilation time
  --> $DIR/issue-111932.rs:5:26
   |
LL |         println!("{:?}", foo);
   |         -----------------^^^-
   |         |         |      |
   |         |         |      doesn't have a size known at compile-time
   |         |         required by a bound introduced by this call
   |         in this macro invocation (#1)
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!` (#1)
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this macro invocation (#2)
  --> $SRC_DIR/core/src/macros/mod.rs:LL:COL
   |
   = note: in this expansion of `$crate::format_args_nl!` (#2)
   |
   = help: the trait `Sized` is not implemented for `dyn Foo`
note: required by a bound in `core::fmt::rt::Argument::<'a>::new_debug`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
